test/compile_errors/err_recovery_mid_statement.w
//! expect-error: expected

fn greet(name: str):
    let prefix = "Hello"
    let msg = prefix ++ +++
    let result = prefix ++ ", " ++ name
    print(result)

fn main:
    greet("world")
